--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.10",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-69d4b800-20241021",
