--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.10",
+    "lucide-react": "^0.539.0",
     "next": "15.0.1",
     "next-seo": "^6.8.0",
     "next-themes": "^0.3.0",
