--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@farhanmp/ai-chatbot-widget": "^1.0.5",
     "framer-motion": "^11.11.10",
+    "i18next": "^25.4.2",
     "lucide-react": "^0.539.0",
     "next": "15.0.1",
+    "next-i18next": "^15.4.2",
     "next-seo": "^6.8.0",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-i18next": "^15.7.2",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
