--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-i18next": "^15.7.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@types/node": "^20",
