--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
   },
   "dependencies": {
     "@farhanmp/ai-chatbot-widget": "^1.0.7",
+    "@hookform/resolvers": "^5.2.2",
+    "@supabase/supabase-js": "^2.57.4",
+    "formidable": "^3.5.4",
     "framer-motion": "^11.11.10",
     "i18next": "^25.4.2",
     "lucide-react": "0.542.0",
+    "mongoose": "^8.18.1",
+    "nanoid": "^5.1.6",
     "next": "15.0.1",
     "next-i18next": "^15.4.2",
     "next-seo": "^6.8.0",
     "next-themes": "^0.3.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-hook-form": "^7.62.0",
     "react-i18next": "^15.7.2",
     "react-icons": "^5.3.0",
-    "typewriter-effect": "^2.22.0"
+    "swr": "^2.3.6",
+    "typewriter-effect": "^2.22.0",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
